--- a/views/index.pug
+++ b/views/index.pug
@@ -7,5 +7,7 @@ html(lang="en")
         title Document
         link(rel="stylesheet", href="style.css")
     body 
-    p The Time is: 
+    main 
+        header 
+            p The Time is: 
     script(src="index.js") 
